--- a/client/src/pages/Teams/pages/teams.css
+++ b/client/src/pages/Teams/pages/teams.css
@@ -123,8 +123,8 @@
 .teamsGrid {
     margin-top: 16px;
     display: grid;
-    gap: 14px;
-    grid-template-columns: 1fr;
+    gap: 16px;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .teamCard {
